# capstone-prtech

./: .env.example  .gitignore  README.md  composer.json  endpointtest.http  package-lock.json  package.json  sqlerror.txt  tailwind.config.js  vercel.json  vite.config.js
.github/workflows/: new-deploy-branch_prtech-capstone.yml
.run/: Serve and Dev.run.xml  run dev.run.xml
Python/flaskProject/: app.py  datacleaner.py  pyproject.toml
Python/generate-report/: inventoryreport.py  main.py  predictexport.py  requirements.txt  salesreport.py  salesreport_df.py
Python/prtech_comments_api/: pyproject.toml  requirements.txt  stopword.py  test.py
Python/stock-sense-api/: README.MD  datevalueFix.py  handle_predict_reporting.py  main.py  mydata.py  prtechPredict.py  requirements.txt  test.py  update_date.ipynb  xgboost.ipynb  xgboost_with_comments.ipynb
app/Console/: Kernel.php
app/Helper/: Helper.php
app/Helpers/: CustomHelper.php  DateGenerator.php  EmailHelper.php  ShippingHelper.php
app/Http/: Helper.php  Kernel.php
app/Livewire/: Announcementbar.php  CartSidebar.php  EditUser.php  Landing.php  LeaveReview.php  NotificationList.php  Searchbar.php  SellerNotificationCount.php  SellerNotificationItem.php  SellerNotificationList.php  SellerNotificationViewing.php  WishlistSidebar.php
app/Mail/: OrderShipped.php
app/Models/: AnnouncementBanner.php  Bookmark.php  CartItem.php  (+36 more)
config/: app.php  database.php  livewire.php  platform.php
database/: ERD.txt
public/: storage  uploads
routes/: api.php  auth.php  platform.php  web.php
storage/: .gitignore
(+391 files in other folders)
