[tool.poetry]
name = "prtech_comments_api"
version = "0.1.0"
description = ""
authors = ["richmondb <richmond.billones@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
pandas = "^2.2.1"
wordcloud = "^1.9.3"
preprocess = "^2.0.0"
nltk = "^3.8.1"
emoji = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
